retry of setup, initial project + oas_v3 exported
